--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header_root {
+  background-color: #222222;
+  height: 60px;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.images_container_root {
+  height: calc(100vh - 60px);
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 40px;
+}
+
+.mb-24 {
+  margin-bottom: 24px;
+}
+
+.img-container > img {
+  min-height: 200px;
+  cursor: pointer;
+}
+
+.header_main {
+  width: 400px;
+  max-width: 90%;
+  display: flex;
+  align-items: center;
+}
+
+.header_main input {
+  height: 40px;
+  border-radius: 8px 0 0 8px;
+  border: 1px solid #222222;
+  outline: none;
+  font-size: 16px;
+  padding: 0 16px;
+}
+.header_main > button {
+  height: 40px;
+  border-radius: 0px 8px 8px 0px;
+  border: 1px solid #222222;
+  outline: none;
+  min-width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+}
+.past_query_root {
+  position: absolute;
+  width: 100%;
+  top: 42px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 4px 5px 20px 0px #0000006b;
+  padding: 10px;
+}
+.past_query_root p {
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  margin-bottom: 16px;
+}
+.post_cancel {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  opacity: 0;
+}
+.past_query_root > div:hover .post_cancel {
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+
+.wrapper {
+  height: 100px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 1rem;
+  background-color: transparent;
+  padding: 1rem;
+}
+
+.dot {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: red;
+  animation-name: pulse;
+  animation-duration: 600ms;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+}
+
+.dot-2 {
+  animation-delay: 150ms;
+}
+
+.dot-3 {
+  animation-delay: 300ms;
+}
+
+.dot-4 {
+  animation-delay: 450ms;
+}
+.image_modal {
+  height: 340px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.image_modal img {
+  max-height: 100%;
+}
+.modal_close {
+  position: absolute;
+  background: transparent;
+  outline: none;
+  border: none;
+  top: -54px;
+  right: -48px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes pulse {
+  0% {
+    opacity: 1;
+    scale: 1;
+    filter: blur(0);
   }
-  to {
-    transform: rotate(360deg);
+
+  25% {
+    opacity: 0.75;
+    scale: 0.75;
+    filter: blur(0.25rem);
+  }
+
+  50% {
+    opacity: 0.5;
+    scale: 0.5;
+    filter: blur(0.5rem);
+  }
+
+  75% {
+    opacity: 0.25;
+    scale: 0.25;
+    filter: blur(0.75rem);
+  }
+
+  100% {
+    opacity: 0;
+    scale: 0;
+    filter: blur(1rem);
   }
 }
