--- a/src/App.css
+++ b/src/App.css
@@ -55,12 +55,16 @@
   border-radius: 8px;
   box-shadow: 4px 5px 20px 0px #0000006b;
   padding: 10px;
+  max-height: 250px;
+  overflow: hidden;
+  overflow-y: auto;
 }
 .past_query_root p {
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
   margin-bottom: 16px;
+  line-break: anywhere;
 }
 .post_cancel {
   background-color: transparent;
